argocd/apps/infra/monitoring/grafana/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: monitoring-app
  name: grafana-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - grafanak8s.yanello.net
  rules:
    - backendRefs:
        - name: grafana
          namespace: monitoring
          port: 80
